fix spacing

--- a/public/output.css
+++ b/public/output.css
@@ -672,10 +672,6 @@ video {
   top: 50%;
 }
 
-.top-24 {
-  top: 6rem;
-}
-
 .top-\[10\%\] {
   top: 10%;
 }
@@ -686,22 +682,6 @@ video {
 
 .top-\[var\(--navbar-height\)\] {
   top: var(--navbar-height);
-}
-
-.top-16 {
-  top: 4rem;
-}
-
-.top-8 {
-  top: 2rem;
-}
-
-.top-4 {
-  top: 1rem;
-}
-
-.top-2 {
-  top: 0.5rem;
 }
 
 .-z-30 {
@@ -1039,14 +1019,6 @@ video {
   height: var(--nextui-spacing-unit-8);
 }
 
-.h-64 {
-  height: 16rem;
-}
-
-.h-\[18px\] {
-  height: 18px;
-}
-
 .max-h-64 {
   max-height: 16rem;
 }
@@ -1181,10 +1153,6 @@ video {
 
 .w-unit-8 {
   width: var(--nextui-spacing-unit-8);
-}
-
-.w-64 {
-  width: 16rem;
 }
 
 .min-w-\[200px\] {
@@ -2389,6 +2357,11 @@ video {
   padding-bottom: 3rem;
 }
 
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -2407,16 +2380,6 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.py-24 {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-}
-
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
 }
 
 .\!pb-0 {
@@ -2485,10 +2448,6 @@ video {
 
 .pt-2 {
   padding-top: 0.5rem;
-}
-
-.pt-24 {
-  padding-top: 6rem;
 }
 
 .pt-3 {
